# StockAnalyzer

./: .gitignore  CMakeLists.txt  Diagrama sem nome.drawio  build.bat
diagrams/: flowchart-data_collect.drawio
include/: gdatastockmarket.hpp  stock.h  stock.hpp  stockhistory.hpp
src/: gdatastocksmarket.cpp  main.cpp  stock.cpp  stockhistory.cpp
